# Cabin-Scene

./: .gitignore  235.index.js  Cargo.toml  README.md  code.js  index.html  index.js  notes.txt  package.json  pkg_index_js.index.js  style.css  webpack.config.js
assets/: cabin.blend  cabin.blend1  clouds.blend  clouds.blend1  cloudsphere.blend  cloudsphere.blend1  land.blend  land.blend1  nebula.blend  nebula.blend1  scene.blend  scene.blend1  skysphere.blend  skysphere.blend1  starsphere.blend  starsphere.blend1  sun.blend  sun.blend1  tree.blend  tree.blend1
models/: clouds.mtl  cloudsphere.mtl  nebula.mtl  scene.mtl  skysphere.mtl  starsphere.mtl  sun.mtl
pkg/: .gitignore  cabin_scene.js  cabin_scene_bg.wasm
public/: index.html  style.css
shaders/: SceneFragmentShader.glsl  SceneVertexShader.glsl  ShadowVertexShader.glsl  SkySphereFragmentShader.glsl  SkySphereVertexShader.glsl  SunFragmentShader.glsl  SunVertexShader.glsl  WaterFragmentShader.glsl  WaterVertexShader.glsl
src/: createProgram.js  createShader.js  getSkyColor.js  lib.rs  objLoader.js  shaderFunctions.js  skyColor.js
