[package]
name = "cabin-scene"
version = "0.1.0"
edition = "2021"
authors = ["Alex Brown"]
description = "A 3D scene made in WebGL and WebAssembly"
repository = "https://github.com/alexanderdouglasbrown/Cabin-Scene"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"